# ChatLol

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
chatlol/: __main__.py  config.py  database.py  file_processor.py  main.py
chatlol/providers/: __init__.py  antigravity.py  base.py  claude.py  claude_cli.py  deepseek.py  gemini.py  kiro.py  ninerouter.py  ollama.py  openai.py  openrouter.py
chatlol/static/: app.js  files.css  files.html  files.js  index.html  settings.css  settings.html  settings.js  style.css
tests/: test_antigravity.py  test_claude_cli.py  test_database.py  test_file_manager.py  test_file_processor.py  test_main.py  test_providers.py  test_settings.py
